# ost_explorer

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-13-ost-explorer-implementation.md
docs/superpowers/specs/: 2026-04-13-ost-explorer-design.md
rules/: example_rules.yaml  lateral_movement.yaml
src/ost_explorer/: cli.py  models.py
src/ost_explorer/engine/: attachment_content.py  body_extractor.py  export.py  scanner.py  search.py
src/ost_explorer/parser/: __init__.py  base.py  cache.py  detect.py  ole_parser.py  pypff_parser.py
src/ost_explorer/rules/: __init__.py  default_rules.yaml  loader.py
src/ost_explorer/templates/: report.html
src/ost_explorer/tui/: app.py  export_dialog.py  folder_tree.py  search_bar.py
tests/: conftest.py  test_cache.py  test_cli.py  test_detect.py  test_export.py  test_integration.py  test_models.py  test_rules_loader.py  test_scanner.py  test_search.py
