[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ost-explorer"
version = "0.1.0"
description = "PST/OST email archive triage tool for penetration testing"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.70.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "olefile>=0.46",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
ost_explorer = "ost_explorer.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
